# diffusion-image-watermark

./: .gitignore  PROJECT_SUMMARY.md  README.md  evaluate.py  main.py  pipeline.py  pyproject.toml  requirements.txt  visualize.py
attacks/: __init__.py  base.py  compression.py  crop.py  perturbation.py
docs/: USAGE.md  visual_report.html
examples/: demo.py  sample_pipeline.py
metrics/: __init__.py  quality.py
src/diffusion_image_watermark/: __init__.py  core.py  recipe_bank.py
tests/: test_smoke.py
watermarks/: __init__.py  base.py  frequency.py  neural.py  spatial.py
