[project]
name = "diffusion-image-watermark"
version = "0.1.0"
description = "生成式图像水印嵌入与验证框架"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "林裕斌" },
  { name = "曾科" },
  { name = "田承金" },
  { name = "吕善翔" }
]

[project.scripts]
diffusion_image_watermark = "diffusion_image_watermark.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
